# CodeSnap

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.ruler/: AGENTS.md  ruler.toml
src/codesnap/: checkpoint_system.py  cli.py  comparator.py  config.py  diff.py  fs.py  models.py  storage.py
src/codesnap/services/: __init__.py  checkpoint_service.py  comparison_service.py  file_monitor_service.py  file_service.py  interfaces.py  restore_service.py
tests/: test_checkpoint_service.py  test_comparison_service.py  test_config.py  test_file_service.py  test_interfaces.py  test_models.py  test_storage.py
